--- a/config/ds_z3_bf16_config.json
+++ b/config/ds_z3_bf16_config.json
@@ -29,7 +29,7 @@
       "stage3_param_persistence_threshold": "auto",
       "stage3_max_live_parameters": 1e9,
       "stage3_max_reuse_distance": 1e9,
-      "stage3_gather_16bit_weights_on_model_save": false
+      "stage3_gather_16bit_weights_on_model_save": true
     },
     "gradient_accumulation_steps": "auto",
     "gradient_clipping": "auto",
