--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-accelerate>=0.12.0
-click==8.0.3
-datasets==2.8.0
-deepspeed==0.8.0
-transformers[torch]==4.25.1
+accelerate>=0.16.0,<1
+click>=8.0.4,<9
+datasets>=2.10.0,<3
+deepspeed>=0.9.0,<1
+transformers[torch]>=4.28.1,<5
 langchain>=0.0.139
+torch>=1.13.1,<2
