Set bf16 flags corretly for a10/a100

--- a/config/a100_config.json
+++ b/config/a100_config.json
@@ -1,6 +1,9 @@
 {
+    "fp16": {
+      "enabled": false
+    },
     "bf16": {
-      "enabled": "auto"
+      "enabled": true
     },
     "optimizer": {
       "type": "AdamW",
