--- a/config/v100_config.json
+++ b/config/v100_config.json
@@ -2,6 +2,9 @@
     "fp16": {
       "enabled": true
     },
+    "bf16": {
+      "enabled": false
+    },
     "optimizer": {
       "type": "AdamW",
       "params": {
